--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "keen-slider": "^6.8.6",
     "next": "13.5.6",
     "react": "^18",
