--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "stripe": "^14.1.0"
+    "stripe": "^14.1.0",
+    "zustand": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^20",
