--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "axios": "^1.6.0",
     "keen-slider": "^6.8.6",
     "next": "13.5.6",
